test_regress/t/t_assert_comp_bad.out
-Info: t/t_assert_comp_bad.v:10:7: 
                                 : ... In instance t
   10 |       $info;
      |       ^~~~~
-Info: t/t_assert_comp_bad.v:11:7: User compile-time info
                                 : ... In instance t
   11 |       $info("User compile-time info");
      |       ^~~~~
%Warning-USERWARN: t/t_assert_comp_bad.v:12:7: 
                                             : ... In instance t
   12 |       $warning;
      |       ^~~~~~~~
                   ... Use "/* verilator lint_off USERWARN */" and lint_on around source to disable this message.
%Warning-USERWARN: t/t_assert_comp_bad.v:13:7: User compile-time warning
                                             : ... In instance t
   13 |       $warning("User compile-time warning");
      |       ^~~~~~~~
%Warning-USERWARN: t/t_assert_comp_bad.v:14:7:           1
                                             : ... In instance t
   14 |       $warning(1);   
      |       ^~~~~~~~
%Warning-USERERROR: t/t_assert_comp_bad.v:15:7: 
                                              : ... In instance t
   15 |       $error;
      |       ^~~~~~
%Warning-USERERROR: t/t_assert_comp_bad.v:16:7: User compile-time error
                                              : ... In instance t
   16 |       $error("User compile-time error");
      |       ^~~~~~
%Warning-USERFATAL: t/t_assert_comp_bad.v:17:7: 
                                              : ... In instance t
   17 |       $fatal;
      |       ^~~~~~
%Error: Exiting due to
